the way | user no click and changed the title to only the name

--- a/theway/index.html
+++ b/theway/index.html
@@ -6,9 +6,9 @@
   <!-- Hide from search engines -->
   <meta name="robots" content="noindex,nofollow">
 </head>
-<body style="background:#111;color:white;text-align:center;padding-top:100px;font-family:sans-serif;">
+<body style="background:#111;color:white;text-align:center;padding-top:100px;font-family:sans-serif; user-select: none; cursor: default;">
 
-  <h1>Egypt Central – The Way</h1>
+  <h1>The Way</h1>
 
   <!-- Image -->
   <div style="margin-top:30px;">
@@ -78,3 +78,4 @@
 
 </body>
 </html>
+
